k8s/deploy/infra/local-drive-provisioner.yaml
---
# This is my custom daemonset to prep drives with encryption
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/name: local-drive-provisioner
  name: local-drive-provisioner
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: local-drive-provisioner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: local-drive-provisioner
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: provision
          image: shosti/local-drive-provisioner:v4
          imagePullPolicy: Always
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /dev
              name: dev
            - mountPath: /run/lvm
              name: run-lvm
            - mountPath: /mnt/disks
              name: mnt-disks
            - mountPath: /config
              name: config
      volumes:
        - hostPath:
            path: /dev
          name: dev
        - hostPath:
            path: /mnt/disks
          name: mnt-disks
        - hostPath:
            path: /run/lvm
          name: run-lvm
        - name: config
          secret:
            secretName: local-drives
