k8s/deploy/infra/external-monitoring.yaml
# Reference: https://devops.college/prometheus-operator-how-to-monitor-an-external-service-3cb6ac8d5acb
---
apiVersion: v1
kind: Endpoints
metadata:
  name: netsvc
  namespace: monitoring
  labels:
    app.kubernetes.io/component: netsvc
subsets:
  - addresses:
      - hostname: netsvc0
        ip: 10.51.60.50
      - hostname: netsvc1
        ip: 10.51.60.51
      - hostname: netsvc2
        ip: 10.51.60.52
    ports:
      - name: metrics
        port: 9100
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: netsvc
  namespace: monitoring
  labels:
    app.kubernetes.io/component: netsvc
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: metrics
      port: 9100
      protocol: TCP
      targetPort: 9100
