k8s/deploy/infra/ingress-public.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: ingress-public
  namespace: ingress-public
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            eevans.me/public: "true"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared
  namespace: ingress-public
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cloudflared
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "5000"
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: region1.v2.argotunnel.com
        - matchName: region2.v2.argotunnel.com
      toPorts:
        - ports:
            - port: "7844"
    - toFQDNs:
        - matchName: update.argotunnel.com
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: api.cloudflare.com
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: ingress-public
      toPorts:
        - ports:
            - port: "80"
            - port: "443"
    - toEndpoints:
        - matchLabels:
            k8s:eevans.me/public: "true"
          matchExpressions:
            # Note to future self: after hours of debugging, it seems that L7
            # policies only work with *explicit* namespace matching. See
            # https://docs.cilium.io/en/stable/security/policy/kubernetes/#namespaces
            # for the most relevant docs I could find, although even those are a
            # bit vague.
            - key: k8s:io.kubernetes.pod.namespace
              operator: In
              values:
                - eevansco
                - ghost
                - listmonk
                - plausible
                - rook-ceph
